# actix-todo-api

./: .env  Cargo.toml  database.sql
src/: config.rs  handlers.rs  main.rs  models.rs
