[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
serde = {version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
lazy_static = "1.4"
hocon = "0.9.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres =  { version = "0.10.3", features = ["serde"] }
tokio-postgres = "0.7.7"